--- a/prettycompanieshouse_app/templates/prettycompanieshouse_app/index.html
+++ b/prettycompanieshouse_app/templates/prettycompanieshouse_app/index.html
@@ -3,104 +3,119 @@
 {% load static %}
 
 {% block head %}
-<link rel="stylesheet" type="text/css" href="{% static 'prettycompanieshouse/css/bootstrap.min.css' %}" />
-<link rel="stylesheet" type="text/css" href="{% static 'prettycompanieshouse_app/css/selectize.bootstrap3.css' %}" />
+    <link rel="stylesheet" type="text/css" href="{% static 'prettycompanieshouse/css/bootstrap.min.css' %}"/>
+    <link rel="stylesheet" type="text/css" href="{% static 'prettycompanieshouse_app/css/selectize.bootstrap3.css' %}"/>
 {% endblock %}
 
 
 {% block content %}
-<div class="body-content">
-    <header class="header">
-    <h1>
-        Pretty Companies House
-    </h1>
-    </header>
+    <div class="body-content">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <header class="header">
+                        <h1>
+                            Pretty Companies House
+                        </h1>
+                    </header>
+                </div>
 
-    <section class="section container-fluid">
+                <div class="col-lg-12">
+                    <select id="select-company" class="movies selectized">
+                        <option value="" selected="selected" name=""></option>
+                    </select>
+                </div>
 
-<select id="select-company" class="movies selectized">
-    <option value="" selected="selected" name=""></option>
-</select>
+                <div class="col-lg-12">
+                    <br>
+                    <div id="company-data"></div>
+                </div>
+            </div>
+        </div>
 
-    </section>
-</div>
+    </div>
 {% endblock %}
 
 {% block scripts %}
-<script src="{% static 'prettycompanieshouse/js/jquery.min.js' %}"></script>
-<script src="{% static 'prettycompanieshouse/js/bootstrap.min.js' %}"></script>
-<script src="{% static 'prettycompanieshouse/js/selectize.js' %}"></script>
+    <script src="{% static 'prettycompanieshouse/js/jquery.min.js' %}"></script>
+    <script src="{% static 'prettycompanieshouse/js/bootstrap.min.js' %}"></script>
+    <script src="{% static 'prettycompanieshouse/js/selectize.js' %}"></script>
 
 
-<script>
-$( document ).ready(function() {
+    <script>
+        $(document).ready(function () {
 
-var chosenCompany = null;
+            var chosenCompany = null;
 
-$('#select-company').selectize({
-    valueField: 'title',
-    labelField: 'title',
-    searchField: 'title',
-    options: [],
-    create: false,
-    render: {
-        option: function(item, escape) {
+            $('#select-company').selectize({
+                valueField: 'title',
+                labelField: 'title',
+                searchField: 'title',
+                options: [],
+                create: false,
+                render: {
+                    option: function (item, escape) {
 
-            return '<div>' +
-                '<span class="title">' +
-                    '<span class="name">' + escape(item.title) + '</span>' +
-                '</span>' +
-                '<p class="small">' + escape(item.address) + '</p>' +
+                        return '<div>' +
+                            '<span class="title">' +
+                            '<span class="name">' + escape(item.title) + '</span>' +
+                            '</span>' +
+                            '<p class="small">' + escape(item.address) + '</p>' +
 
-            '</div>';
-        },
-        item: function(item, escape){
-         chosenCompany = item;
-         return '<form>' +
-                '<span class="title">' +
-                    '<span class="name">' + escape(item.title) + '</span>' +
-                '</span>' +
-                '<span class="number" hidden>' + escape(item.number) + '</span>' +
-                '<span class="address" hidden>' + escape(item.address) + '</span>' +
-            '</form>';
-        }
-    },
-    load: function(query, callback) {
-        if (!query.length) return callback();
-        $.ajax({
-            url: "{% url 'companies_house_info' %}",
-            type: 'POST',
-            dataType: 'json',
-            data: {
-           search: query,
-           csrfmiddlewaretoken: "{{ csrf_token }}"
-           },
-            error: function(err) {
-            console.log(err);
-                callback();
-            },
-            success: function(res) {
-                callback(res["companies"]);
-            }
+                            '</div>';
+                    },
+                    item: function (item, escape) {
+                        chosenCompany = item;
+
+                        $("#company-data").html("<span>" + item.title + "</span><br>" +
+                            "<span>" + item.number + "</span><br>" +
+                            "<span>" + item.address + "</span>");
+
+                        return '<form>' +
+                            '<span class="title">' +
+                            '<span class="name">' + escape(item.title) + '</span>' +
+                            '</span>' +
+                            '<span class="number" hidden>' + escape(item.number) + '</span>' +
+                            '<span class="address" hidden>' + escape(item.address) + '</span>' +
+                            '</form>';
+                    }
+                },
+                load: function (query, callback) {
+                    if (!query.length) return callback();
+                    $.ajax({
+                        url: "{% url 'companies_house_info' %}",
+                        type: 'POST',
+                        dataType: 'json',
+                        data: {
+                            search: query,
+                            csrfmiddlewaretoken: "{{ csrf_token }}"
+                        },
+                        error: function (err) {
+                            console.log(err);
+                            callback();
+                        },
+                        success: function (res) {
+                            callback(res["companies"]);
+                        }
+                    });
+                },
+
+                onItemAdd: function (value, $item) {
+                    var company_name = $($item.find("span.name")[0]).text();
+                    $("#id_company_name").val(company_name);
+                    $("#company-name").text(company_name);
+
+                    var company_address = $($item.find("span.address")[0]).text();
+                    $("#id_company_address").val(company_address);
+                    $("#company-address").text(company_address);
+                    $("#confirm-create-company").modal('show');
+
+                },
+            });
+
+
         });
-    },
-
-    onItemAdd: function(value, $item){
-        var company_name = $($item.find("span.name")[0]).text();
-        $("#id_company_name").val(company_name);
-        $("#company-name").text(company_name);
-
-        var company_address = $($item.find("span.address")[0]).text();
-        $("#id_company_address").val(company_address);
-        $("#company-address").text(company_address);
-        $("#confirm-create-company").modal('show');
-
-    },
-});
-
-
-});
-</script>
+    </script>
 
 
 {% endblock %}
