--- a/prettycompanieshouse_app/templates/prettycompanieshouse_app/index.html
+++ b/prettycompanieshouse_app/templates/prettycompanieshouse_app/index.html
@@ -27,8 +27,10 @@
                 </div>
 
                 <div class="col-lg-12">
-                    <br>
-                    <div id="company-data"></div>
+                    <div class='col-lg-12 col-xs-12' id="name"></div>
+                    <div class='col-lg-12 col-xs-12' id="number"></div>
+                    <div class='col-lg-12 col-xs-12' id="address"></div>
+
                 </div>
             </div>
         </div>
@@ -67,9 +69,9 @@
                     item: function (item, escape) {
                         chosenCompany = item;
 
-                        $("#company-data").html("<span>" + item.title + "</span><br>" +
-                            "<span>" + item.number + "</span><br>" +
-                            "<span>" + item.address + "</span>");
+                        $("#name").html("<label><strong>Title :</strong></label><span>" + item.title + "</span><br>");
+                        $("#number").html("<label><strong>Number :</strong></label><span>" + item.number + "</span><br>");
+                        $("#address").html("<label><strong>Address :</strong></label><span>" + item.address + "</span><br>");
 
                         return '<form>' +
                             '<span class="title">' +
