--- a/prettycompanieshouse_app/templates/prettycompanieshouse_app/index.html
+++ b/prettycompanieshouse_app/templates/prettycompanieshouse_app/index.html
@@ -2,65 +2,66 @@
 
 {% load static %}
 
-{% block head %}
-    <link rel="stylesheet" type="text/css" href="{% static 'prettycompanieshouse/css/bootstrap.min.css' %}"/>
-    <link rel="stylesheet" type="text/css" href="{% static 'prettycompanieshouse_app/css/selectize.bootstrap3.css' %}"/>
-{% endblock %}
-
-
 {% block content %}
 
-    <div class="body-content">
-        <div class="container">
+<div class="body-content">
+    <div class="container">
 
-            <section class="row">
-                <div class="col-lg-12">
-                    <header class="header">
-                        <h1>
-                            Pretty Companies House
-                        </h1>
-                    </header>
-                </div>
-            </section>
-
-
-            <section class="row">
-
-                <div class="col-lg-12">
-                    <select id="select-company" class="movies selectized">
-                        <option value="" selected="selected" name=""></option>
-                    </select>
-                </div>
-            </section>
-
-
-            <section>
-                <h3 class="col-xs-12" id='company-name'>[[ company_name ]]</h3>
-
-                 <div id="company-info">
-                     <company-info
-                          v-for="item in companyInfo"
-                          v-bind:info="item"
-                          v-bind:key="item.key">
-                        </company-info>
-                 </div>
-
-            </section>
-
+        <section class="row">
+            <div class="col-lg-12">
+                <header class="header">
+                    <h1>
+                        Pretty Companies House
+                    </h1>
+                    <p class="lead small"> Type the company name to get the info</p>
+                </header>
             </div>
-        </div>
+        </section>
+
+
+        <section class="row">
+
+            <div class="col-md-6 col-md-offset-3">
+                <select id="select-company" class="movies selectized">
+                    <option value="" selected="selected" name=""></option>
+                </select>
+            </div>
+        </section>
+
+        <section class="panel panel-default">
+
+            <div class="panel-heading">
+                <h3 class="panel-title" id='company-name'>[[ company_name ]]</h3>
+
+                <a href="#"> Download <i class="fa fa-download" aria-hidden="true"></i></a>
+            </div>
+            <div class="panel-body" id="company-info">
+
+                <div>
+                    <company-info
+                            v-for="item in companyInfo"
+                            v-bind:info="item"
+                            v-bind:key="item.key">
+                    </company-info>
+                </div>
+            </div>
+        </section>
+
+    </div>
+</div>
 
 {% endblock %}
 
 {% block scripts %}
-    <script src="{% static 'prettycompanieshouse/js/jquery.min.js' %}"></script>
-    <script src="{% static 'prettycompanieshouse/js/bootstrap.min.js' %}"></script>
-    <script src="{% static 'prettycompanieshouse/js/selectize.js' %}"></script>
-    <script src="{% static 'prettycompanieshouse/js/vue.min.js' %}"></script>
+<script src="{% static 'prettycompanieshouse/js/jquery.min.js' %}"></script>
+<script src="{% static 'prettycompanieshouse/js/bootstrap.min.js' %}"></script>
+<script src="{% static 'prettycompanieshouse/js/selectize.js' %}"></script>
+<script src="{% static 'prettycompanieshouse/js/vue.min.js' %}"></script>
 
 
-    <script>
+<script>
         $(document).ready(function () {
+        $("section.panel").hide();
 
         Vue.component('company-info', {
                     props: ['info'],
@@ -110,11 +111,13 @@
                         var selectedInfoArray = [];
 
                          for (key in company) {
+                         if (key[0]!='$'){
                                     selectedInfoArray.push( {'key': key, 'value': company[key] } );
-                               }
+                               }}
 
                         selectedCompanyTitle.company_name = escape(company.title);
                         selectedCompanyVue.companyInfo =  selectedInfoArray;
+                        $("section.panel").show();
 
                         return '<form>' +
                             '<span class="name">' + escape(company.title) + '</span>' +
@@ -144,7 +147,8 @@
 
 
         });
-    </script>
+
+</script>
 
 
 {% endblock %}
