added pdf download

--- a/prettycompanieshouse_app/templates/prettycompanieshouse_app/index.html
+++ b/prettycompanieshouse_app/templates/prettycompanieshouse_app/index.html
@@ -33,7 +33,7 @@
             <div class="panel-heading">
                 <h3 class="panel-title" id='company-name'>[[ company_name ]]</h3>
 
-                <a href="#"> Download <i class="fa fa-download" aria-hidden="true"></i></a>
+                <a href="{% url 'download_pdf' %}" target="_blank"> Download <i class="fa fa-download" aria-hidden="true"></i></a>
             </div>
             <div class="panel-body" id="company-info">
 
